CMBSandbox4/src/objects/Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Settings contain the credentials and URL of the HarvestApp org that is to be synced with this SFDC org.</description>
    <fields>
        <fullName>AutoSyncFrequencyInHours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Auto-Sync Frequency In Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutoSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HarvestURL__c</fullName>
        <label>Harvest URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LastSync__c</fullName>
        <label>Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledJobId__c</fullName>
        <label>ScheduledJobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Settings</label>
</CustomObject>